# indian-festivals-api

./: .env.example  .gitignore  API_ENDPOINTS_DOCUMENTATION.txt  LICENSE  README.md  project_analysis.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: dependencies.py  routes.py
app/core/: __init__.py  cache.py  scraper.py
app/middleware/: __init__.py  error_handler.py  rate_limiter.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  festival_service.py  scraper.py
app/utils/: cache.py
docs/: api.md  architecture.md  cache.md  schema.md  upgrade_blueprint.md
tests/: __init__.py  test_api.py
