[project]
name = "indian-festivals-api"
version = "1.0.1"
description = "A high-performance, asynchronous REST API for dynamically extracting, caching, and normalizing Indian festivals, national holidays, and regional celebrations."
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "Praveen Yadav", email = "your.email@example.com" }
]
keywords = ["fastapi", "uv", "scraping", "indian-festivals", "cache", "async", "render"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: ASGI Server",
    "Security :: Cryptography",
]

dependencies = [
    "beautifulsoup4>=4.15.0",
    "cachetools>=7.1.4",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.49.0",
    "uvloop>=0.21.0 ; sys_platform != 'win32'",
]
